// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
// https://dbdiagram.io/d
Table genre {
  id int [primary key]
  name varchar [unique, not null]
}

Table mpa_rating {
  id int [primary key]
  name varchar [unique, not null]
}

Table film {
  id int [primary key]
  name varchar [not null]
  description varchar(200)
  release_date date
  duration_minutes int
}

Table film_rating {
  film_id int [ref: - film.id]
  rating_id int [ref: - mpa_rating.id]
  indexes {
    (film_id, rating_id) [pk]
  }
}

Table film_genre {
  id int [primary key]
  film_id int [ref: > film.id]
  genre_id int [ref: > genre.id]
}

Table film_likes {
  id int [primary key]
  film_id int [ref: > film.id]
  user_id int [ref: > user.id]
}

Table user {
  id int [primary key]
  login varchar [not null]
  name varchar
  email varchar [not null]
  birth_date date
}

Table friendship_status {
  id int [primary key]
  name varchar [unique, not null]
}

Table user_friendship {
  user_id int [ref: > user.id]
  friend_user_id int [ref: > user.id]
  status_id int [ref: > friendship_status.id, not null]
  indexes {
    (user_id, friend_user_id) [pk]
  }
  last_updated timestamp
}